Update README with JavaFX installation and run instructions
Added instructions for running the project with JavaFX.