@@ -1,2 +1,8 @@
 # CCPROG3_MP_Edep-Martinez
 Repository for the MP of Tobias Edep and Simon Martinez
+
+How to run:
+
+1. Make sure you have JavaFX installed. You can install it from this [link](https://openjfx.io/openjfx-docs/), and it also provides a guide on how to use it.
+2. Once installed, run this command in the command prompt: `javac --module-path %PATH_TO_FX% --add-modules javafx.controls AppLauncher.java`
+3. Once it compiles with no errors, run this command next: `java --module-path %PATH_TO_FX% --add-modules javafx.controls AppLauncher.java`
